# xrdp

./: configure.ac
instfiles/: Makefile.am
instfiles/init.d/: Makefile.am
instfiles/pam.d/: Makefile.am
